Make my eyes stop bleeding.

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 .container {
-    max-width: 29%;
+    max-width: 30%;
     margin-left: 30%;
     margin-right: 30%;
 }
@@ -13,6 +13,8 @@
 #display {
     height: 80px;
     background: lightgreen;
+    font-weight: bold;
+    font-size: 30px;
 }
 
 .buttons div {
